# CardConjurer

./: .dockerignore  .gitignore  .htaccess  404.html  404.php  CNAME  Disclaimer.txt  Dockerfile  Makefile  OLDdisclaimer.html  README.md  ads.txt  app.conf  askScryfall.html  askScryfallStyles.css  askscryfall.html  backup.html  boxGenerator.html  creator.html  disclaimer.html  footer.txt  index.html  index.php  legal.html  life.html  phyrexian.html  pyproject.toml  serve.py  setSymbol.html  site.webmanifest  sitemap.xml  styles.css  symbol.html  termsOfUse.html  termsofuse.html  termsofusea.html  test.html
about/: index.html  index.php
askscryfall/: index.html
askurza/: askUrza.js  index.html  index.php  planeswalkerAbilities.txt
converter/: converter.js  index.php
creator/: index.html  index.php
css/: style-1.css  style-2.css  style-3.css  style-4.css  style-5.css  style-6.css  style-7.css  style-8.css  style-9.css  style.css
data/: browserconfig.xml  m15 - Shortcut.lnk  main.js  site.webmanifest
favicons/: browserconfig.xml
gallery/: gallery.css  gallery.js  galleryImageNameList.txt  index.html  index.php
globalHTML/: footer.html  footer.php  header-1.php  header.html  header.php  menu.html
js/: creator-1.js  creator-10.js  creator-11.js  creator-12.js  creator-13.js  creator-14.js  creator-15.js  creator-16.js  creator-17.js  creator-18.js  creator-19.js  creator-20.js  creator-21.js  creator-22.js  creator-23.js  creator-3.js  creator-4.js  creator-5.js  creator-6.js  creator-7.js  creator-8.js  creator-9.js  creator.js  frameSearch.js  main-1.js  (+4 more)
(+486 files in other folders)
